# esp-s3-mesh-esp-now

./: .gitignore  Cargo.toml  build.rs  justfile  readme.md  validate.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
src/: led.rs  lib.rs
